custom-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-os-lab-portal
  namespace: custom-app-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8-os-lab-portal
  template:
    metadata:
      labels:
        app: k8-os-lab-portal
    spec:
      nodeSelector:
        custom-role: webapp
      containers:
      - name: k8-os-lab-portal
        image: ghost1027/k8-os-lab-portal:v1
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: k8-os-lab-service
  namespace: custom-app-lab
spec:
  selector:
    app: k8-os-lab-portal
  ports:
  - port: 80
    targetPort: 3000
  type: NodePort
