custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-os-lab-ingress
  namespace: custom-app-lab
spec:
  ingressClassName: nginx
  rules:
  - host: portal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8-os-lab-service
            port:
              number: 80
